Fixed uneven shading on the Orders By Deal Report and Deal Invoice Detail Report - closes #769

--- a/src/RentalWorksWebApi/WebpackReports/src/Reports/DealReports/DealInvoiceDetailReport/index.scss
+++ b/src/RentalWorksWebApi/WebpackReports/src/Reports/DealReports/DealInvoiceDetailReport/index.scss
@@ -1,5 +1,5 @@
 ﻿/*DealInvoiceDetailReport*/
-tbody[data-rowtype="detail"]:nth-child(odd) td:not(.no-border) {
+tbody[data-rowtype="detail"]:nth-of-type(odd) td:not(.no-border) {
     background-color: #DCDCDC;
 }
 
